<resources>
    <string name="app_name">Sound Player</string>
    <string name="text_delete_playlist">Deseja excluir a %1$s?</string>
    <string name="text_delete_sound">Deseja deletar %1$s?</string>
    <string name="text_atualizar_playlist">Atualizar o nome da playlist %1$s?</string>
    <string name="text_criar_playlist">Criar playlist</string>
    <string name="editar_nome_playlist">Editar nome da playlist</string>
    <string name="editar_nome">Editar nome</string>
    <string name="excluir">Excluir</string>
    <string name="cancelar">Cancelar</string>
    <string name="atualizar">Atualizar</string>
    <string name="fechar">Fechar</string>
    <string name="buscar">Buscar</string>
    <string name="config_short">Config</string>
    <string name="n_o">N&#227;o</string>
    <string name="sim">Sim</string>
    <string name="adicionar_a_playlist">Adicionar &#224; playlist</string>
    <string name="remover_da_playlist">Remover da playlist</string>
    <string name="selecionar_items">Selecionar itens</string>
    <string name="selecionar_itens">Selecionar itens</string>
    <string name="escolha_a_playlist">Escolha a playlist</string>
    <string name="tittle_settings">Configura&#231;&#245;es</string>
    <string name="tamanho_titulo_musica">Tamanho do t&#237;tulo da m&#250;sica</string>
    <string name="darkmode">Modo escuro</string>
    <string name="thema_visualizacao">Tema do aplicativo</string>
    <string name="pequena">Pequena</string>
    <string name="media">M&#233;dia</string>
    <string name="grande">Grande</string>
    <string name="est_playlist_esta_vazia">Esta playlist est&#225; vazia</string>
    <string name="deletar">Deletar</string>
    <string name="nenhuma_m_sica">Nenhuma m&#250;sica</string>
    <string name="permiss_o_necessaria_para_carragar_as_m_sicas">Permiss&#227;o necess&#225;ria para carregar as m&#250;sicas.</string>
    <string name="total_de_musicas">Total de m&#250;sicas: %1$s</string>
    <string name="criar_playlist">Criar playlist</string>
    <string name="play_list_name">Todas as m&#250;sicas</string>
    <string name="ordenar_sons_por">Ordenar sons por...</string>
    <string name="adicionar_m_sica">Adicionar m&#250;sica</string>
    <string name="nenhuma_m_sica_para_adicionar">Nenhuma m&#250;sica para adicionar</string>
    <string name="selecione_s_m_sicas_para_adicionar_na_playlist_principal">Selecione as m&#250;sicas para adicionar na playlist principal</string>
    <string name="bot_o_para_buscar_musica_pelo_nome">Bot&#227;o para buscar m&#250;sica pelo nome</string>
    <string name="buscar_m_sica">Buscar m&#250;sica</string>
    <string name="desconhecido">Desconhecido</string>
    <string name="n_o_encontramos_nehum_arquivo_de_a_dio_no_seu_aparelho_por_favor_adicione_as">N&#227;o encontramos nenhum arquivo de &#225;udio no seu aparelho. Adicione arquivos de &#225;udio para continuar.</string>
    <string name="fundo_imagem_udio">Imagem de fundo do &#225;udio</string>
    <string name="nome_da_playlist">Nome da playlist</string>
    <string name="permission_required_title">Permiss&#227;o necess&#225;ria</string>
    <string name="permission_required_audio_message">Precisamos da sua permiss&#227;o para acessar as m&#237;dias de &#225;udio do aparelho.</string>
    <string name="accept">Aceitar</string>
    <string name="deny">Negar</string>
    <string name="playlist_name_required">Preencha o campo corretamente</string>
    <string name="playlist_empty_selection_message">Voc&#234; ainda n&#227;o adicionou m&#250;sicas &#224; sua nova playlist.</string>
    <string name="settings_order_restart_message">As playlists que n&#227;o est&#227;o tocando ser&#227;o ordenadas pela nova op&#231;&#227;o.</string>
    <string name="no_created_playlists_message">Voc&#234; n&#227;o possui playlists criadas.</string>
    <string name="select_main_playlist_songs">Selecione as m&#250;sicas para adicionar na playlist principal</string>
    <string name="add_to_playlist">Adicionar &#224; playlist</string>
    <string name="no_songs_to_add">Nenhuma m&#250;sica para adicionar</string>
    <string name="procurar_musicas">Procurar m&#250;sicas</string>
    <string name="playlists">Playlists</string>
    <string name="musicas">M&#250;sicas</string>
    <string name="tocando">tocando</string>
    <string name="digite_titulo_musica">Digite o t&#237;tulo da m&#250;sica</string>
    <string name="lista_vazia_busque_musica">Lista vazia, busque por um t&#237;tulo de m&#250;sica ou nome do artista...</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">DarkMode</string>
    <string name="theme_system">Mesmo que o sistema</string>
    <string name="order_name">Nome</string>
    <string name="order_name_desc">Nome decrescente</string>
    <string name="order_inserted_last">Inserido por &#250;ltimo</string>
    <string name="settings_choose_theme">Escolha o modo de visualiza&#231;&#227;o</string>
    <string name="settings_choose_text_size">Escolha o tamanho da fonte do t&#237;tulo da m&#250;sica</string>
</resources>
