<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.fragment.SettingsFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/settingToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/red"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/ll_Toolbar_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageButton
                android:id="@+id/settings_back_button"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:src="@drawable/back_ios_24"
                />

            <TextView
                android:id="@+id/title_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tittle_settings"
                android:gravity="center"
                android:textColor="@color/white"
                style="@style/TextAppearance.Material3.ActionBar.Title"
                />

        </LinearLayout>

    </com.google.android.material.appbar.MaterialToolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:paddingHorizontal="22dp"
        android:paddingVertical="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settingToolbar">

        <Switch
            android:id="@+id/switchDarkMode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/darkmode"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="UseSwitchCompatOrMaterialXml" />
        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            app:dividerColor="@color/gray"
            />

        <LinearLayout
            android:id="@+id/ll_layou_size_font"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/TextAppearance.Material3.LabelLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tamanho_titulo_musica" />

            <TextView
                android:id="@+id/txv_opcao_size"
                style="@style/TextAppearance.Material3.LabelSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pequena"
                android:textColor="@color/gray" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>